# FreeShadowsocks2

./: .editorconfig  .gitmodules  CMakeLists.txt
src/: FreeShadowsocks.json  main.cpp
